# clawworld

./: .env.example  .gitignore  README.md  agents.json  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
assets/: ATTRIBUTION.md
cli/: clawworld_cli.py  validators.py
cli/templates/: map_json.j2  npc_entry.j2  soul_md.j2
cli/tests/: test_cli.py  test_validators.py
docs/: ADDING_AN_NPC.md  SELF_HOSTING.md
gateway/: __main__.py  config.py  delegation.py  mock.py  ollama.py  provider.py  router.py  server.py  session.py  stream.py  subprocess_provider.py
gateway/mock_responses/: analyst.json  assistant.json  coder.json  lorekeeper.json  townsfolk.json  trader.json
gateway/tests/: conftest.py  test_delegation.py  test_e2e.py  test_mock.py  test_provider.py  test_router.py  test_session.py  test_stream.py  test_stress.py
scripts/: build_maps.py  build_tileset.py  generate_maps.py
src/: App.tsx  main.tsx
src/__tests__/: pathfinding.test.ts  player.test.ts  tilemap.test.ts  world.test.ts
src/data/: agents.ts
src/engine/: camera.ts  mapLoader.ts  npc.ts  npcManager.ts  pathfinding.ts  player.ts  renderer.ts  tilemap.ts  zones.ts
src/gateway/: client.ts  stream.ts
src/store/: world.ts
src/ui/: Dashboard.tsx  DialogueBox.tsx  ErrorBoundary.tsx  GatewayStatus.tsx  HUD.tsx  InteractPrompt.tsx  Minimap.tsx  NameEntry.tsx  TouchControls.tsx
workspaces/analyst/: SOUL.md
workspaces/assistant/: SOUL.md
workspaces/coder/: SOUL.md
workspaces/debugger/: SOUL.md
(+14 files in other folders)
